# local-rag-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  dependencies.py  main.py
apps/api/routers/: __init__.py  documents.py  ingest.py  query.py
apps/api/schemas/: __init__.py  requests.py  responses.py
benchmarks/: __init__.py  cost.py  latency.py
evals/: __init__.py  metrics.py  runner.py
evals/datasets/: sample.json
infra/: docker-compose.yml
rag/: __init__.py  config.py  protocols.py
rag/chunking/: __init__.py  base.py  factory.py  heading.py  recursive.py  semantic.py  sliding_window.py
rag/embed/: __init__.py  factory.py  openai.py  sentence_transformers.py
rag/freshness/: __init__.py  exponential_decay.py
rag/generate/: __init__.py  anthropic.py  citations.py  factory.py  openai.py  prompts.py
rag/index/: __init__.py  manager.py
rag/index/bm25/: __init__.py  index.py
rag/index/qdrant/: __init__.py  client.py
rag/ingest/: __init__.py  pipeline.py
rag/ingest/cleaners/: __init__.py  pipeline.py  text.py
rag/ingest/parsers/: __init__.py  base.py  docx.py  factory.py  html.py  pdf.py  text.py
rag/rerank/: __init__.py  cross_encoder.py  factory.py  llm.py
rag/retrieve/: __init__.py  hybrid.py  lexical.py  vector.py
rag/retrieve/fusion/: __init__.py  rrf.py  weighted.py
rag/trace/: __init__.py  writer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ingest_pipeline.py  test_retrieval_pipeline.py
tests/unit/: __init__.py  test_chunking.py  test_citations.py  test_freshness.py  test_fusion.py  test_metrics.py  test_rerank.py
